more wrap stuff

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 				<a href="#one" class="more scrolly">Learn More</a>
 			</div>
-		</section>
+		</section> 
 
 		<!-- One -->
 		<section id="one" class="wrapper style5 special">
@@ -78,6 +78,29 @@
 	<!-- Two -->
 	<section id="two" class="wrapper style5">
 		<div class="inner">
+			<section class="spotlight">
+				<div class="image"><img src="wrap/images/banner.jpg" alt=""/></div><div class="content">
+				<h2>UX/UI Design Engineering:
+					Wrap Media</h2>
+					<ul class="actions labels">
+					<li>
+						ui
+					</li>
+					<li>
+						ux
+					</li>
+					<li>
+						engineering
+					</li>
+					<label>ui</label>
+					</ul>
+					<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
+					<!-- My goals for this project we're to increase accessibility -->
+					<ul class="actions">
+						<li><a href="wrap/" class="button fit">Learn More</a></li>
+					</ul>
+				</div>
+			</section>
 			<section class="spotlight">
 				<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
 				<h2>UX Design:
