--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -60,20 +60,20 @@
 				<div class="inner">
 					<div class="row">
 						<div class="6u 12u(medium)">
-							<b>THE CLIENT</b>
+							<h3>THE CLIENT</h3>
 							<p>Scholastic is the world's leading publisher and distributor of children's books. </p>
-							<b>MY ROLE</b> <p>I heavily contributed to persona development & I created the visual designs for the personas. I was also in charge of creating survey questions, conducting interviews, wireframing, prototyping, and usability testing. </p>
-							<b>THE SOLUTION</b>
+							<h3>MY ROLE</h3> <p>I heavily contributed to persona development & I created the visual designs for the personas. I was also in charge of creating survey questions, conducting interviews, wireframing, prototyping, and usability testing. </p>
+							<h3>THE SOLUTION</h3>
 							<p>We ended up creating an online system to help encourage children to read outside of school. Our system included quizzes to help children discover books curated to their liking, a new bookshelf for children to track the books they have read and way for kids to request books from their parents.</p>
 							<!-- </header> -->
 							<ul class="actions vertical">
 								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button ">Our prototyped solution</a></li>
 							</ul>
 						</div>               
-						<div class="6u$ 12u$(medium)">
-							<b>THE TASK</b>
+						<div class="6u 12u$(medium)">
+							<h3>THE TASK</h3>
 							<p>We were asked to take advantage of digital technology and positive role models to encourage children to read books outside of school.</p>
-							<b>THE PROBLEM</b>
+							<h3>THE PROBLEM</h3>
 							<p>We discovered from our interviews and surveys that children were not reading on digital devices. We also discovered that an approach integrating positive role models was not necessary. The real challenge was finding a way for children to choose and find paper books in a fun and exciting way. </p>
 						</div>     
 					</div>
@@ -82,7 +82,7 @@
 
 
 
-					<h3>RESEARCH</h3>
+					<h3>RESEARCH – Before Analysis</h3>
 					<div class="row">
 						<div class="5u 12u(medium)">
 							<p>A closer look at Scholastic's website...</p>
