--- a/wrap/index.html
+++ b/wrap/index.html
@@ -54,10 +54,16 @@
 			<!-- <h2>Wrap Media<span class="x">&times;</span>Widgets</h2> -->
 			<h2>The Mobile Web<span class="x">&times;</span>Wrap Media</h2>
 		</header>
+
 		<section class="wrapper style5">
 			<div class="inner">
 				<div class="row">
 					<div class="12u 12u$(medium)">
+						<h4>These are Wraps!</h4>
+						<p>
+							Wrap pushes mobile storytelling forward to deliver content combined with sophisticated computing functionality in a beautiful user experience that all mobile users deserve. 
+							Wrap pushes mobile storytelling forward to deliver content combined with sophisticated computing functionality in a beautiful user experience that all mobile users deserve. 
+						</p>
 						<h4>UI/UX Designer & Engineer</h4>
 						<p>
 							In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
@@ -65,77 +71,189 @@
 						</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="5u 12u(medium)">
-						<div class="wrap-media-embed" data-wrap-id="7cd843ef-3a42-4c01-8c40-d99d96d85fca"></div>
-						<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
-					</div>
-					<div class="7u 12u(medium)" style="padding: 3em;">
-						<h3>Wrap I created</h3>
-						<p>
-							In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
-							The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
-						</p>
-					</div>
+			</div>
+		</section>
+		<div class="row">
+
+			<!-- Spotify Artists -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<!-- Bearded Bastard -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<!-- Bare -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- Valentino -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
+				<script src="https://wrap.co/embed/bootstrap.js" ></script>
+			</div>
+			<!-- Burnello Cucineli -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="de7dba2e-bd79-497e-957d-082ac42f6f3c"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<!-- Cascade-->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<!-- Tart Collections -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- Sportcore -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<!-- Raen Loci -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- Raen -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="d30ad6e1-6555-406a-9259-4355d5b6750b"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- Lincoln -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- Wish Receipt -->
+			<!-- <div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="8cec35f7-9f7f-40a3-8a28-eda7fff5bccb" ></div>
+				<script src="http://runtime-demo.wrap.co/embed/bootstrap.js" ></script>
+			</div> -->
+			
+			<!-- Statefarm -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="0ed6732f-c5fd-40d4-80c7-79638d94d7b6"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+
+			<!-- In Wrap Signup -->
+			<div class="2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+		</div>
+	</div>
+
+		<!-- <div class="row">
+			<div class="4u 12u(medium)" style="padding: 0 0 0 1.5em; margin:0;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<div class="4u 12u(medium)"style="padding: 0 0 0 1.5em; margin-left: -1.5em;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<div class="4u 12u(medium)"style="padding: 0 0 0 1.51em; margin-left: -1.5em;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<div class="4u 12u(medium)" style="padding: 0 0 0 1.5em; margin:0;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<div class="4u 12u(medium)"style="padding: 0 0 0 1.5em; margin-left: -1.5em;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div>
+			<div class="4u 12u(medium)"style="padding: 0 0 0 1.51em; margin-left: -1.5em;">
+				<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+				<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+			</div> 
+		</div> -->
+		<section class="wrapper style5">
+
+			<div class="row">
+				<div class="5u 12u(medium)">
+					<div class="wrap-media-embed" data-wrap-id="7cd843ef-3a42-4c01-8c40-d99d96d85fca"></div>
+					<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
 				</div>
-				<div class="row">
-					<div class="5u 12u(medium)">
-						<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
-						<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
-					</div>
-					<div class="7u 12u(medium)" style="padding: 3em;">
-						<h3>Wrap I created</h3>
-						<p>
-							In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
-							The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="5u 12u(medium)">
-						<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
-						<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
-					</div>
-					<div class="7u 12u(medium)" style="padding: 3em;">
-						<h3>Wrap I created</h3>
-						<p>
-							In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
-							The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
-						</p>
-					</div>
-				</div>
-
-				
-
-
-
-
-
-
-				<div class="row">
+				<div class="7u 12u$(medium)" style="padding: 3em;">
+					<h3>Wrap I created</h3>
 					<p>
-						I approached designing the best experience for these developers by:
-						Integrating an API documentation plug-in into our build. This allowed for more streamlined documentation to be delivered to our developers. 
-
-							Analyzing the tools that developers use for using and developing API's. In this process I discovered SOAPUI and Postman to be commonly used tools.
-
-							Generating lots of JSON examples and use cases. This included creating scripts using SOAPUI to completely build out these use cases.	
-					</p>			
+						In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
+						The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="5u 12u(medium)">
+					<div class="wrap-media-embed" data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52"></div>
+					<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+				</div>
+				<div class="7u 12u$(medium)" style="padding: 3em;">
+					<h3>Wrap I created</h3>
+					<p>
+						In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
+						The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="5u 12u(medium)">
+					<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
+					<script src="https://wrap.co/embed/bootstrap.js" async defer></script>
+				</div>
+				<div class="7u 12u$(medium)" style="padding: 3em;">
+					<h3>Wrap I created</h3>
+					<p>
+						In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
+						The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
+					</p>
 				</div>
 			</div>
 
-		</div></section>
-	</article>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="icons">
-			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-		</ul>
-	</footer>
+
+
+
+
+
+
+			<div class="row">
+				<p>
+					I approached designing the best experience for these developers by:
+					Integrating an API documentation plug-in into our build. This allowed for more streamlined documentation to be delivered to our developers. 
+
+					Analyzing the tools that developers use for using and developing API's. In this process I discovered SOAPUI and Postman to be commonly used tools.
+
+					Generating lots of JSON examples and use cases. This included creating scripts using SOAPUI to completely build out these use cases.	
+				</p>			
+			</div>
+		</div>
+
+	</div></section>
+</article>
+
+<!-- Footer -->
+<footer id="footer">
+	<ul class="icons">
+		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+	</ul>
+</footer>
 
 </div>
 
