--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="image"><img src="wrap/images/banner.jpg" alt=""/></div><div class="content">
 				<h2>UX/UI Design Engineering:
 					Wrap Media</h2>
-					<ul class="actions labels">
+					<!-- <ul class="actions labels">
 					<li>
 						ui
 					</li>
@@ -93,7 +93,7 @@
 						engineering
 					</li>
 					<label>ui</label>
-					</ul>
+					</ul> -->
 					<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
 					<!-- My goals for this project we're to increase accessibility -->
 					<ul class="actions">
