--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<section id="two" class="wrapper style5">
 		<div class="inner">
 			<section class="spotlight">
-				<div class="image"><img src="wrap/images/banner.jpg" alt=""/></div><div class="content">
+				<div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div><div class="content">
 				<h2>UX/UI Design Engineering:
 					Wrap Media</h2>
 					<!-- <ul class="actions labels">
