updates to wrap case study

--- a/wrap/index.html
+++ b/wrap/index.html
@@ -180,7 +180,7 @@
 			</div> 
 		</div> -->
 
-		<section class="wrapper style5">
+		<!-- <section class="wrapper style5">
 			<div class="row">
 				<div class="5u 12u(medium)">
 					<div class="wrap-media-embed" data-wrap-id="7cd843ef-3a42-4c01-8c40-d99d96d85fca"></div>
@@ -231,7 +231,7 @@
 
 	</div></section>
 </article>
-
+ -->
 <!-- Footer -->
 <footer id="footer">
 	<ul class="icons">
