added gitignore and wrap case study update

--- a/wrap/index.html
+++ b/wrap/index.html
@@ -142,6 +142,8 @@
 			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
 				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
 			</div> -->
+
+			
 		</div>
 	</div>
 	<section class="wrapper style5">
@@ -168,6 +170,11 @@
 		<div class="wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
 			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52">
 			</div>
+		</div>
+
+		<!-- Architect's Digest -->
+		<div class="wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
 		</div>
 
 		<!-- Bearded Bastard -->
