gulpfile with browsersync

--- a/wrap/index.html
+++ b/wrap/index.html
@@ -168,7 +168,7 @@
 
 		<!-- Spotify Artists -->
 		<div class="wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
-			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52">
+			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52" data-wrap-uncached="true">
 			</div>
 		</div>
 
