--- a/wrap/index.html
+++ b/wrap/index.html
@@ -68,78 +68,78 @@
 				</div>
 			</div>
 		</section>
-		<div class="row wraps">
+		<div class="row 0% wraps">
 
 			<!-- Loverly -->
-			<!-- <div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="87deae3c-5df4-4db2-b75e-3687cfd1221b">
 				</div>
 			</div> -->
 
 			<!-- Bearded Bastard -->
-			<!-- <div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
 				</div>		
 			</div> -->
 			
 			<!-- Raen -->
-			<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
 			</div>
 
 			<!-- Bare -->
-			<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>	
 			</div>
 
 			<!-- Valentino -->
-			<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
 			</div>
 
 			<!-- Burnello Cucineli -->
-			<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="af08905a-73f4-40d3-afb9-65ab9e0488e3"></div>
 			</div>
 
 			<!-- Cascade-->
-			<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
 			</div>
 
 			<!-- Tart Collections -->
-			<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
 			</div>
 
 			<!-- Lincoln -->
-			<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
 			</div>
 
 			<!-- Raen Loci -->
-			<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
 			</div>
 
 			<!-- Sportcore -->
-			<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
 			</div>
 
 			<!-- Wish Receipt -->
-			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="8cec35f7-9f7f-40a3-8a28-eda7fff5bccb" ></div>
 				<script src="http://runtime-demo.wrap.co/embed/bootstrap.js" ></script>
 			</div> -->
 			
 			<!-- Statefarm -->
-			<!-- <div class="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="0ed6732f-c5fd-40d4-80c7-79638d94d7b6"></div>
 			</div> -->
 
 			<!-- In Wrap Signup -->
-			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
 			</div> -->
 
@@ -158,90 +158,90 @@
 			</div>
 		</div>
 	</section>
-	<div class="row wraps">
+	<div class="row 0% wraps">
 
 		<!-- Loverly -->
-		<div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="87deae3c-5df4-4db2-b75e-3687cfd1221b">
 			</div>
 		</div>
 
 		<!-- Spotify Artists -->
-		<div class="wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52" data-wrap-uncached="true">
 			</div>
 		</div>
 
 		<!-- Architect's Digest -->
-		<div class="wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
 		</div>
 
 		<!-- Bearded Bastard -->
-		<div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
 			</div>		
 		</div>
 
 		<!-- Bare -->
-		<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>	
 		</div>
 
 		<!-- Valentino -->
-		<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
 		</div>
 
 		<!-- Burnello Cucineli -->
-		<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="af08905a-73f4-40d3-afb9-65ab9e0488e3"></div>
 		</div>
 
 		<!-- Cascade-->
-		<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
 		</div>
 
 		<!-- Tart Collections -->
-		<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
 		</div>
 
 		<!-- Sportcore -->
-		<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
 		</div>
 
 		<!-- Raen Loci -->
-		<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
 		</div>
 
 		<!-- Raen -->
-		<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
 		</div>
 
 		<!-- Lincoln -->
-		<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+		<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
 			<script src="https://wrap.co/embed/bootstrap.js" ></script>
 		</div>
 
 		<!-- Wish Receipt -->
-			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="8cec35f7-9f7f-40a3-8a28-eda7fff5bccb" ></div>
 				<script src="http://runtime-demo.wrap.co/embed/bootstrap.js" ></script>
 			</div> -->
 			
 			<!-- Statefarm -->
-			<!-- <div class="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="0ed6732f-c5fd-40d4-80c7-79638d94d7b6"></div>
 			</div> -->
 
 			<!-- In Wrap Signup -->
-			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) 12u(xsmall)" style="padding: 0;">
+			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
 			</div> -->
 		</div>
