--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<title>Eric Smith's Portfolio</title>
 	<!--[if lte IE 9]><link rel="shortcut icon" href="favicon.ico" /><![endif]-->
 	<link rel="icon" type="image/png" href="favicon.png" />
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/og-image.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/banner.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/og-image.jpg"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/og-image.jpg"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
