--- a/wrap/index.html
+++ b/wrap/index.html
@@ -4,9 +4,9 @@
 	<title>Wrap Media: Case Study</title>
 	<!-- <link rel="shortcut icon" href="../favicon.ico" /> -->
 	<link rel="icon" type="image/png" href="../favicon.png">
-	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/cisco/images/bg.png" />
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/wrap/images/banner.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
-	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/cisco/images/bg.png"/>
+	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/wrap/images/banner.jpg"/>
 	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
