--- a/perforce/index.html
+++ b/perforce/index.html
@@ -232,6 +232,8 @@
 <script src="../js/jquery.scrolly.min.js"></script>
 <script src="../js/skel.min.js"></script>
 <script src="../js/init.js"></script>
+<script src="../node_modules/retina.js/src/retina.js"></script>
+
 
 </body>
 </html>
