--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta prefix="og: http://ogp.me/ns#" />
 	<meta property="image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/og-image.jpg"/>
 	<meta property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/images/og-image.jpg"/>
-	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work.">
+	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've designed & coded this site with my own two hands as a way to showcase my work.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="keywords" content="" />
@@ -67,7 +67,7 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my <a href="http://github.com/erchsm">github</a>. When im not designing or coding I'm either taking photos or out enjoying some nature.
+					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos or out enjoying some nature.
 					</p><p>
 					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
 				</p>
@@ -80,8 +80,7 @@
 		<div class="inner">
 			<section class="spotlight">
 				<div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div><div class="content">
-				<h2>UX/UI Design Engineering:
-					Wrap Media</h2>
+				<h2>UX/UI Design: Wrap Media</h2>
 					<!-- <ul class="actions labels">
 					<li>
 						ui
@@ -95,7 +94,6 @@
 					<label>ui</label>
 				</ul> -->
 				<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
-				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
 					<li><a href="wrap/" class="button fit">Learn More</a></li>
 				</ul>
@@ -205,6 +203,8 @@
 <script src="js/jquery.scrolly.min.js"></script>
 <script src="js/skel.min.js"></script>
 <script src="js/init.js"></script>
+<script src="../node_modules/retina.js/src/retina.js"></script>
+
 
 </body>
 </html>
